# graph_hdc

./: .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  CompositeHyperNet_README.md  DEVELOP.rst  README.rst  SHAP_EXTENSION.md  debug_reconstruct.py  pyproject.toml
graph_hdc/: binding.py  explain.py  graph.py  models.py  reconstruct.py  shap.py  utils.py
graph_hdc/experiments/: README.md
graph_hdc/experiments/fingerprints/: NORM_REGULARIZATION_COMPARISON.md  README.md  _slurm_ex_00.py  _slurm_ex_01.py  _slurm_ex_01.sh  _slurm_ex_02.py  _slurm_ex_02.sh  _slurm_ex_03.py  _slurm_ex_03.sh  _slurm_ex_04.py  _slurm_ex_04.sh  _slurm_ex_05.py  _slurm_ex_06.py  _slurm_ex_07.py  _slurm_ex_08.py  _slurm_ex_09.py  analyze_bioactivity.ipynb  analyze_ex_00.ipynb  analyze_ex_01.ipynb  analyze_ex_02.ipynb  analyze_ex_03.ipynb  analyze_ex_04.ipynb  analyze_ex_04_2.ipynb  analyze_ex_05.ipynb  analyze_ex_06.ipynb  analyze_ex_07.ipynb  analyze_ex_08.ipynb  analyze_ex_09.ipynb  analyze_hopt.ipynb  experiment_best_parameters_map.json  mixin_asphericity.py  mixin_conjugated.py  mixin_lrpc.py  mixin_tpsa_balananj.py  mixin_wiener_index.py  molecule_representation.py  molecule_representation__fp.py  molecule_representation__fp__qm9_smiles.yml  molecule_representation__hdc.py  (+113 more)
graph_hdc/models/: base.py  main.py
graph_hdc/special/: color.py  colors.py  molecules.py  tmcs.py
tests/: test_binding.py  test_explain.py  test_graph.py  test_models.py  test_reconstruct.py  test_shap.py  test_special_color.py  test_special_colors.py  test_special_molecules.py  test_utils.py
(+10 files in other folders)
